docs: 📝 名前→github idに修正

--- a/dev-logs/2023-05-21.md
+++ b/dev-logs/2023-05-21.md
@@ -50,7 +50,7 @@ plateau award の場合（前年のスケジュールを参考）
 
 ### 次回までのタスク
 
-- 布施：インフラ周り調査(特に AWS? 料金体系、セキュリティなど)
+- [@pluto13377](https://github.com/pluto13377): インフラ周り調査(特に AWS? 料金体系、セキュリティなど)
 - 他 4 人：アイデア出し。(slack アイデア出しチャンネルに投稿)
 
 ### 次回 MTG
