--- a/dev-logs/2023-06-04.md
+++ b/dev-logs/2023-06-04.md
@@ -13,27 +13,27 @@
 
 ### 進捗
 
-#### 只野
+#### [@yziori](https://github.com/yziori)
 
 - github repo 作成
 - アイデア出し
   - 風景画と 3dmodle 比較できるアプリ
   - 3dmodel に株価反映させるアプリ
 
-#### 須貝
+#### [@niwakumo](https://github.com/niwakumo)
 
 - アイデア<br>
   - ウォーリーをさがせ
 - plateau さわってみた
 
-#### 布施
+#### [@pluto13377](https://github.com/pluto13377)
 
 - git/github キャッチアップ
 - aws の構成/料金体系について調査
 - アイデア出し
   - 花火のやつ
 
-#### 橋本
+#### [@ansony1242](https://github.com/ansony1242)
 
 - アイデア出し
 
@@ -42,7 +42,7 @@
 
 - html, css, ui/ux 周りのキャッチアップ。
 
-#### 清水
+#### [@ghoti824](https://github.com/ghoti824)
 
 - アイデア出し<br>
 
@@ -68,7 +68,7 @@
 ### 宿題
 
 - 全員：アイデア検討(新規アイデア創出、既存の深堀り)→slack アイデア出しチャンネルに投稿
-- 布施：要件決定時すぐに設計できるように、インフラ周りのキャッチアップ(AWS 以外も検討)
+- pluto13377：要件決定時すぐに設計できるように、インフラ周りのキャッチアップ(AWS 以外も検討)
 
 ### 次回 MTG
 
