--- a/dev-logs/2023-06-11.md
+++ b/dev-logs/2023-06-11.md
@@ -7,10 +7,10 @@
 
 ## 出席者
 
-- @yziori
-- @niwakumo
-- @pluto13377
-- @ghoti824
+- [@yziori](https://github.com/yziori)
+- [@niwakumo](https://github.com/niwakumo)
+- [@pluto13377](https://github.com/pluto13377)
+- [@ghoti824](https://github.com/ghoti824)
 
 ## やったこと・きまったこと
 
@@ -19,8 +19,8 @@
 ### 宿題
 
 - 全員：Miro でアイデア出し、深堀りを引き続き行う。
-- @niwakumo : サンプルアプリ(three.js のやつ)を private リポジトリとして push する。
-- @pluto1377 : インフラ関連のまとめ資料を docs リポジトリに push する。
+- [@niwakumo](https://github.com/niwakumo): サンプルアプリ(three.js のやつ)を private リポジトリとして push する。
+- [@pluto1377](https://github.com/pluto13377): インフラ関連のまとめ資料を docs リポジトリに push する。
 
 ### 次回 MTG
 
