--- a/dev-logs/2023-07-17.md
+++ b/dev-logs/2023-07-17.md
@@ -24,6 +24,10 @@
 
 ### 進捗
 
+#### 振り返り(Fun Done Learn)
+
+![Fun Done Learn](fdl-20230717_232633-Dint9K.png)
+
 #### [@yziori](https://github.com/yziori)
 
 - タスク管理ツールのドキュメントを一部作成
