--- a/dev-logs/2023-07-30.md
+++ b/dev-logs/2023-07-30.md
@@ -9,38 +9,50 @@
 
 - [@yziori](https://github.com/yziori)
 - [@niwakumo](https://github.com/niwakumo)
-- [@ansony1242](https://github.com/ansony1242)
-- [@pluto13377](https://github.com/pluto13377)
-- [@ghoti824](https://github.com/ghoti824)
 
 ## やったこと・きまったこと
+
+- プロトタイピングで進めていく。
+
+  - 設計書作成は保留。要件定義書ベースで進める。
+  - できそうなタスク見つけて issue 切って進める。
+
+- 技術選定
+  - フロントエンド：Next.js(TS), ESLint, jest, vercel(デプロイ)
+  - 3Dmodel レンダリング：deck.gl
 
 ### 進捗
 
 #### 振り返り(Fun Done Learn)
 
-<!-- ![Fun Done Learn](image/fdl-20230717_232633-Dint9K.png) -->
+![Fun Done Learn](image/fdl-20230730_230215-vx5O3W.png)
 
 #### [@yziori](https://github.com/yziori)
 
+- 基本設計書たたき台作成
+- github の設定変更
+  - プルリク
+  - メンバー権限
+- ブランチ運用、タスク管理用のドキュメント作成
+
 #### [@niwakumo](https://github.com/niwakumo)
 
-#### [@ansony1242](https://github.com/ansony1242)
-
-#### [@pluto13377](https://github.com/pluto13377)
-
-#### [@ghoti824](https://github.com/ghoti824)
+- プルリクレビュー
+- db 設計について issue 作成
+  - 上記方針のため一旦保留。
 
 ### 宿題
 
 #### [@yziori](https://github.com/yziori)
 
+- フロントエンド環境構築
+- デザイン作成
+
 #### [@niwakumo](https://github.com/niwakumo)
 
-#### [@ansony1242](https://github.com/ansony1242)
-
-#### [@pluto13377](https://github.com/pluto13377)
-
-#### [@ghoti824](https://github.com/ghoti824)
+- エディタ選定
+  - チュートリアルまで目標。
 
 ### 次回 MTG
+
+未定
