--- a/dev-logs/2023-07-30.md
+++ b/dev-logs/2023-07-30.md
@@ -14,12 +14,16 @@
 
 - プロトタイピングで進めていく。
 
-  - 設計書作成は保留。要件定義書ベースで進める。
-  - できそうなタスク見つけて issue 切って進める。
+  - 設計書作成は保留。実装は要件定義書をベースとして進める。
+  - 各々できそうなタスク見つけて issue 切って進める。
 
 - 技術選定
-  - フロントエンド：Next.js(TS), ESLint, jest, vercel(デプロイ)
+  - フロントエンド：Next.js(TS), ESLint, jest
+  - デプロイ：vercel
+    - 開発速度重視でとりあえず vercel にデプロイする。
+    - 今後バックエンド開発に取り掛かった際に AWS 等のインフラを
   - 3Dmodel レンダリング：deck.gl
+  - 埋め込みエディタ：未定
 
 ### 進捗
 
