--- a/dev-logs/2023-08-13.md
+++ b/dev-logs/2023-08-13.md
@@ -16,18 +16,20 @@
 
 - 技術選定
   - 埋め込みエディタ：[monaco](https://microsoft.github.io/monaco-editor/)
+- フロントエンドとバックエンドはリポジトリを分離させる
+  - あとでフロントエンドのリポジトリ名を変更しておく。
 
 ### 進捗
 
 #### [@yziori](https://github.com/yziori)
 
-- linter, formatter導入中
-    - commit時に強制的にlinterとformatterを動作させるようにする。
+- linter, formatter 導入中
+  - commit 時に強制的に linter と formatter を動作させるようにする。
 
 #### [@niwakumo](https://github.com/niwakumo)
 
 - コードエディタ選定
-    - manacoが良さそう。サンプルも豊富。
+  - manaco が良さそう。サンプルも豊富。
 
 #### [@ansony1242](https://github.com/ansony1242)
 
@@ -35,19 +37,18 @@
 
 #### [@pluto13377](https://github.com/pluto13377)
 
-- vercelデプロイ環境構築中。
-    - organizationだと有料。
-
+- vercel デプロイ環境構築中。
+  - organization だと有料。
 
 ### 宿題
 
 #### [@yziori](https://github.com/yziori)
 
-- Linter, formatter導入
+- Linter, formatter 導入
 
 #### [@niwakumo](https://github.com/niwakumo)
 
-- monacoチュートリアル
+- monaco チュートリアル
 - デザインをもとに実装
 
 #### [@ansony1242](https://github.com/ansony1242)
@@ -57,6 +58,6 @@
 
 #### [@pluto13377](https://github.com/pluto13377)
 
-- ~~vercelについて調査~~
-    - organizationへのデプロイは有料プランでのみ利用可能
+- ~~vercel について調査~~
+  - organization へのデプロイは有料プランでのみ利用可能
 - 代替案調査(GCP firebase?)
